// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Descriptions > Descriptions support colon 1`] = `
"<div class="xy-descriptions css-dev-only-do-not-override-1p3hq3p">
  <!---->
  <div class="xy-descriptions-view">
    <table>
      <tbody>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label xy-descriptions-item-no-colon">Product</span><span class="xy-descriptions-item-content">Cloud Database</span></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`Descriptions > Descriptions support style 1`] = `
"<div style="background-color: rgb(232, 232, 232);" class="xy-descriptions css-dev-only-do-not-override-1p3hq3p">
  <!---->
  <div class="xy-descriptions-view">
    <table>
      <tbody>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container">
              <!----><span class="xy-descriptions-item-content">Cloud Database</span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`Descriptions > Descriptions.Item support className 1`] = `
"<div class="xy-descriptions css-dev-only-do-not-override-1p3hq3p">
  <!---->
  <div class="xy-descriptions-view">
    <table>
      <tbody>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item my-class" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Product</span><span class="xy-descriptions-item-content">Cloud Database</span></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`Descriptions > column is number 1`] = `
"<div class="xy-descriptions css-dev-only-do-not-override-1p3hq3p">
  <!---->
  <div class="xy-descriptions-view">
    <table>
      <tbody>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Product</span><span class="xy-descriptions-item-content">Cloud Database</span></div>
          </td>
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Billing</span><span class="xy-descriptions-item-content">Prepaid</span></div>
          </td>
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">time</span><span class="xy-descriptions-item-content">18:00:00</span></div>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="3">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Amount</span><span class="xy-descriptions-item-content">$80.00</span></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`Descriptions > vertical layout 1`] = `
"<div class="xy-descriptions css-dev-only-do-not-override-1p3hq3p">
  <!---->
  <div class="xy-descriptions-view">
    <table>
      <tbody>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Product</span>
              <!---->
            </div>
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container">
              <!----><span class="xy-descriptions-item-content">Cloud Database</span>
            </div>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Billing</span>
              <!---->
            </div>
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container">
              <!----><span class="xy-descriptions-item-content">Prepaid</span>
            </div>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">time</span>
              <!---->
            </div>
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container">
              <!----><span class="xy-descriptions-item-content">18:00:00</span>
            </div>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Amount</span>
              <!---->
            </div>
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container">
              <!----><span class="xy-descriptions-item-content">$80.00</span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`Descriptions > when item is rendered conditionally 1`] = `
"<div class="xy-descriptions css-dev-only-do-not-override-1p3hq3p">
  <!---->
  <div class="xy-descriptions-view">
    <table>
      <tbody>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Product</span><span class="xy-descriptions-item-content">Cloud Database</span></div>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Billing</span><span class="xy-descriptions-item-content">Prepaid</span></div>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">time</span><span class="xy-descriptions-item-content">18:00:00</span></div>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Amount</span><span class="xy-descriptions-item-content">$80.00</span></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;
